[package]
name = "nexus-browser"
version = "1.0.0"
edition = "2021"
license = "MPL or Apache 2.0"
[dependencies]
tao = "0.30"
wry = "0.45"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
