[package]
name = "nexus-browser"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0 OR Apache-2.0"

[[bin]]
name = "nexus-browser"
path = "main.rs"

[dependencies]
tao = "0.30"
wry = "0.45"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
dotenvy = "0.15"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
