[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0 OR Apache-2.0"
[dependencies]
tao = "0.25.0"
wry = "0.25.0"
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"
num_cpus = "1.14"
dotenvy = "0.15"
lazy_static = "1.4"
regex = "1"
url = "2.3"
futures-util = "0.3"
